--- a/real-e-con_ingestion.ipynb
+++ b/real-e-con_ingestion.ipynb
@@ -714,8 +714,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ab89e9b4",
+   "metadata": {},
+   "source": [
+    "os.environ[\"GEMINI_API_KEY\"] = \"AIzaSyAODasJVvnnhDYAu7-qh9B7jZKbfo-3B7w\"\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "569a2de9",
    "metadata": {},
    "outputs": [
@@ -742,7 +750,7 @@
     }
    ],
    "source": [
-    "os.environ[\"GEMINI_API_KEY\"] = \"AIzaSyAODasJVvnnhDYAu7-qh9B7jZKbfo-3B7w\"\n",
+    "\n",
     "\n",
     "result = run_ingestion(\n",
     "    pdf=\"./data/(The Pearson series in economics) Pindyck, Robert S._ Rubinfeld, Daniel L - Microeconomics-Pearson (2018).pdf\",\n",
