--- a/real-e-con_ingestion.ipynb
+++ b/real-e-con_ingestion.ipynb
@@ -128,9 +128,7 @@
    "id": "66a05f0c",
    "metadata": {},
    "source": [
-    "pip install pymupdf neo4j openai tiktoken\n",
-    "export OPENAI_API_KEY=\"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\"\n",
-    "gemini AIzaSyAODasJVvnnhDYAu7-qh9B7jZKbfo-3B7w"
+    "pip install pymupdf neo4j openai tiktoken\n"
    ]
   },
   {
@@ -714,14 +712,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "ab89e9b4",
-   "metadata": {},
-   "source": [
-    "os.environ[\"GEMINI_API_KEY\"] = \"AIzaSyAODasJVvnnhDYAu7-qh9B7jZKbfo-3B7w\"\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "569a2de9",
@@ -750,7 +740,7 @@
     }
    ],
    "source": [
-    "\n",
+    "os.environ[\"GEMINI_API_KEY\"] = \"AIzaSyAODasJVvnnhDYAu7-qh9B7jZKbfo-3B7w\"\n",
     "\n",
     "result = run_ingestion(\n",
     "    pdf=\"./data/(The Pearson series in economics) Pindyck, Robert S._ Rubinfeld, Daniel L - Microeconomics-Pearson (2018).pdf\",\n",
