--- a/real-e-con_retrieval_prompt_v2.ipynb
+++ b/real-e-con_retrieval_prompt_v2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "id": "19f4809a",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
     "NEO4J_USER = \"neo4j\"\n",
     "NEO4J_PASS = \"testpassword\"\n",
     "\n",
-    "os.environ[\"GEMINI_API_KEY\"] = \"AIzaSyBKWdm54rD_41tX5FDwknA_KA_KQiG3U2s\"\n",
+    "os.environ[\"GEMINI_API_KEY\"] = \"AIzaSyAE9YXY9cee7Pm7h1DIHjf3ujPqJjATOI4\"\n",
     "\n",
     "def run_cypher(cypher: str, **params):\n",
     "    driver = GraphDatabase.driver(NEO4J_URI, auth=(NEO4J_USER, NEO4J_PASS))\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "id": "c64d3ecc",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "id": "16fd2475",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
       "outline_nodes: 468\n",
       "has_vector_index: True\n",
       "vector_indexes: ['chunkEmbedding']\n",
-      "Embedding dims in DB: [{'dim': 768, 'n': 1323}]\n"
+      "Embedding dims in DB: [{'dim': 768, 'n': 1387}]\n"
      ]
     }
    ],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "id": "29813455",
    "metadata": {},
    "outputs": [],
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "id": "4063cc3c",
    "metadata": {},
    "outputs": [],
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "id": "31256ab3",
    "metadata": {},
    "outputs": [],
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "id": "2206d153",
    "metadata": {},
    "outputs": [
@@ -215,16 +215,16 @@
      "output_type": "stream",
      "text": [
       "Top concepts:\n",
-      "- consumer surplus (score: 4.210114479064941 )\n",
-      "- Consumer Surplus (score: 4.210114479064941 )\n",
-      "- Consumer and Producer Surplus (score: 4.105982780456543 )\n",
-      "- Consumer Surplus and Demand (score: 4.105982780456543 )\n",
-      "- Capturing Consumer Surplus (score: 3.6575069427490234 )\n",
-      "- Review of Consumer and Producer Surplus (score: 3.332627773284912 )\n",
-      "- Application of Consumer and Producer Surplus (score: 3.332627773284912 )\n",
-      "- Uncertainty and Consumer Behavior (score: 2.409142255783081 )\n",
-      "- Price Signaling and Price Leadership (score: 2.360989809036255 )\n",
-      "- Consumer Equilibrium in a Competitive Market (score: 2.3020410537719727 )\n",
+      "- consumer surplus (score: 4.214738845825195 )\n",
+      "- Consumer Surplus (score: 4.214738845825195 )\n",
+      "- Consumer and Producer Surplus (score: 4.105898857116699 )\n",
+      "- Consumer Surplus and Demand (score: 4.105898857116699 )\n",
+      "- Capturing Consumer Surplus (score: 3.6614279747009277 )\n",
+      "- Review of Consumer and Producer Surplus (score: 3.332463502883911 )\n",
+      "- Application of Consumer and Producer Surplus (score: 3.332463502883911 )\n",
+      "- Uncertainty and Consumer Behavior (score: 2.4073686599731445 )\n",
+      "- Price Signaling and Price Leadership (score: 2.3447768688201904 )\n",
+      "- Consumer Equilibrium in a Competitive Market (score: 2.3047776222229004 )\n",
       "\n",
       "Top chunks:\n",
       "- score=0.744 page=364 chunk=0  preview=362  PART 2    Producers, Consumers, and Competitive Markets\n",
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "id": "4af6254c",
    "metadata": {},
    "outputs": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 16,
    "id": "8cf61883",
    "metadata": {},
    "outputs": [],
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "id": "8a02c663",
    "metadata": {},
    "outputs": [],
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "id": "24e40e90",
    "metadata": {},
    "outputs": [],
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "id": "38dbb9fe",
    "metadata": {},
    "outputs": [],
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "candidate_chunk_chapter_v2",
    "metadata": {},
    "outputs": [],
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "id": "7a40bbae",
    "metadata": {},
    "outputs": [
@@ -534,57 +534,36 @@
      "output_type": "stream",
      "text": [
       "Top concepts (deduped):\n",
-      "- Consumer Surplus (score: 4.210114479064941 )\n",
-      "- Consumer and Producer Surplus (score: 4.105982780456543 )\n",
-      "- Consumer Surplus and Demand (score: 4.105982780456543 )\n",
-      "- Capturing Consumer Surplus (score: 3.6575069427490234 )\n",
-      "- Application of Consumer and Producer Surplus (score: 3.332627773284912 )\n",
-      "- Review of Consumer and Producer Surplus (score: 3.332627773284912 )\n",
-      "- Uncertainty and Consumer Behavior (score: 2.409142255783081 )\n",
-      "- Price Signaling and Price Leadership (score: 2.360989809036255 )\n",
-      "- Consumer Equilibrium in a Competitive Market (score: 2.3020410537719727 )\n",
-      "- producer surplus (score: 2.2095870971679688 )\n",
+      "- Consumer Behavior (score: 4.561809539794922 )\n",
+      "- Uncertainty and Consumer Behavior (score: 4.372417449951172 )\n",
+      "- Marginal Utility and Consumer Choice (score: 3.9918861389160156 )\n",
+      "- The Utility Possibilities Frontier (score: 2.761538505554199 )\n",
+      "- marginal utility (score: 2.666668653488159 )\n",
+      "- utility function (score: 2.666668653488159 )\n",
+      "- Income Changes (score: 2.5589606761932373 )\n",
+      "- Price Changes (score: 2.5589606761932373 )\n",
+      "- The Effects of Changes in Income and Prices (score: 2.423326253890991 )\n",
+      "- Consumer Surplus and Demand (score: 2.4073686599731445 )\n",
       "\n",
       "Top chunks:\n",
-      "- score=0.744 p=364 c=0  362  PART 2    Producers, Consumers, and Competitive Markets Summary QueStionS for review 1. Simple models of supply and demand can be used ...\n",
-      "- score=0.717 p=330 c=0  328  PART 2    Producers, Consumers, and Competitive Markets The result is a shortage—i.e., excess demand. Of course, those consumers who ca...\n",
-      "- score=0.702 p=332 c=0  330  PART 2    Producers, Consumers, and Competitive Markets This triangle measures the value to consumers, less what they would have had to...\n",
-      "- score=0.695 p=331 c=0  CHAPTER 9    THE ANALySIS oF CoMPETITIvE MARKETS  329 the market price, $5. He is indifferent between buying or not buying the good, and if ...\n",
-      "- score=0.693 p=333 c=0  CHAPTER 9    THE ANALySIS oF CoMPETITIvE MARKETS  331 in the market but are producing less. Therefore, the total change in producer surplus ...\n",
-      "- score=0.683 p=331 c=1  er and producer surplus that result from the government price-control policy. Let’s go through these changes step by step. 1. Change in Cons...\n",
-      "- score=0.655 p=353 c=0  CHAPTER 9    THE ANALySIS oF CoMPETITIvE MARKETS  351 9.5 import Quotas and Tariffs Many countries use import quotas and tariffs to keep the...\n",
-      "- score=0.654 p=334 c=1  ($3.40>mcf) = $70.04 billion  B = (1>2) * (2.4 billion mcf) * ($1.33>mcf) = $1.60 billion  C = (1>2) * (2.4 billion mcf) * ($3.40>mcf) = $4....\n",
-      "- score=0.654 p=329 c=0  327 I n Chapter 2, we saw how supply and demand curves can help us describe and understand the behavior of competitive markets. In Chapters ...\n",
-      "- score=0.644 p=154 c=0  152  PART 2    Producers, Consumers, and Competitive markets 4.4 Consumer Surplus Consumers buy goods because the purchase makes them better...\n",
+      "- score=0.671 p=134 c=0  132  PART 2    Producers, Consumers, and Competitive markets the demands of other people. These effects play a crucial role in the de- mands...\n",
+      "- score=0.654 p=109 c=0  ChAPTer 3    CoNSUMer BehAvIor  107 PriCe Changes What happens to the budget line if the price of one good changes but the price of the othe...\n",
+      "- score=0.654 p=119 c=0  ChAPTer 3    CoNSUMer BehAvIor  117 3.5  Marginal utility and Consumer Choice In Section 3.3, we showed graphically how a consumer can maxim...\n",
+      "- score=0.653 p=177 c=0  CHAPTER 4    iNDiViDUAL AND mARkET DEmAND  175 the cost-minimizing choice of X and Y must occur at the point of tangency of the budget line ...\n",
+      "- score=0.649 p=735 c=0  CHaPTEr 19    BEHavIOral ECONOmICS  733 request. Another option might be for stores to be encouraged or even required to feature LED bulbs p...\n",
+      "- score=0.648 p=179 c=0  CHAPTER 4    iNDiViDUAL AND mARkET DEmAND  177 ExErciSES 1. Which of the following utility functions are consistent with convex indifference...\n",
+      "- score=0.648 p=141 c=1  e. In the next section, we delve into the ways in which a change in the price of a good can affect consumer demand. 4.2 Income and Substitut...\n",
+      "- score=0.647 p=145 c=0  CHAPTER 4    iNDiViDUAL AND mARkET DEmAND  143 Let’s begin by focusing on the effect of the pro- gram over a period of five years. The relev...\n",
+      "- score=0.646 p=134 c=1  In Figure 4.1 (b), this modified consumption choice is at E, which shows that at a price of $2, 4 units of food are demanded. Finally, what ...\n",
+      "- score=0.644 p=135 c=0  CHAPTER 4    iNDiViDUAL AND mARkET DEmAND  133 This pattern of increasing consumption of a good in response to a decrease in price almost al...\n",
       "\n",
       "Answer:\n",
       "\n",
-      "Here's an explanation of consumer surplus and deadweight loss from a price ceiling:\n",
+      "When the budget changes, typically due to price alterations, the budget line rotates (p. 109, p. 134, p. 145). If the price of one good falls, the budget line rotates outward (p. 109, p. 134). Conversely, if the price of one good increases, the budget line rotates inward (p. 109, p. 134). If the prices of both goods change proportionally, leaving the ratio of prices unchanged, the slope of the budget line remains the same (p. 109). For example, if both prices fall by half, the budget line shifts outward in a parallel manner (p. 109). If the prices of both goods and the consumer's income all double, the budget line's slope and position are unchanged, and real purchasing power is maintained (p. 109).\n",
       "\n",
-      "**Consumer Surplus**\n",
-      "*   Consumer surplus measures the aggregate net benefit that consumers obtain from a competitive market (p. 330).\n",
-      "*   It is the total benefit or value that consumers receive beyond what they pay for a good (p. 330).\n",
-      "*   For consumers in the aggregate, consumer surplus is the area between the demand curve and the market price (p. 331).\n",
-      "*   Individual consumer surplus is the difference between the maximum amount a consumer is willing to pay for a good and the amount the consumer actually pays (p. 154).\n",
+      "Regarding consumer behavior, consumers choose market baskets to maximize their utility given their budget constraint (p. 119, p. 134). A change in a good's price affects consumer demand through two mechanisms: the substitution effect and the income effect (p. 141, p. 177). The substitution effect causes consumers to buy more of the good that has become cheaper and less of relatively more expensive goods (p. 141, p. 177). The income effect arises from changes in real purchasing power; for instance, a decrease in a good's price increases purchasing power (p. 109, p. 141). Generally, as a good's price falls, consumers tend to buy more of it (p. 135). The consumption of other goods may either increase or decrease in such a scenario (p. 135).\n",
       "\n",
-      "**Consumer Surplus from a Price Ceiling**\n",
-      "*   A government-imposed price ceiling sets a maximum allowable price below the market-clearing level (p. 330, p. 331).\n",
-      "*   This policy causes the quantity demanded to rise and the quantity supplied to fall, creating a shortage (p. 329, p. 331).\n",
-      "*   Some consumers are better off because they can purchase the good at a lower price (Pmax rather than P0), gaining consumer surplus represented by rectangle A (p. 331, p. 332).\n",
-      "*   However, other consumers are worse off because they are rationed out of the market due to the reduction in production and sales (p. 331). Their loss of surplus is represented by triangle B (p. 331, p. 332).\n",
-      "*   The net change in consumer surplus from a price ceiling is the difference between rectangle A and triangle B (p. 332, p. 333).\n",
-      "*   If demand is sufficiently inelastic, price controls can result in a net loss of consumer surplus (p. 333).\n",
-      "\n",
-      "**Deadweight Loss**\n",
-      "*   Deadweight loss is the net loss of total surplus, which includes both consumer and producer surplus (p. 333).\n",
-      "*   It represents an economic inefficiency caused by government intervention (p. 364, p. 333).\n",
-      "\n",
-      "**Deadweight Loss from a Price Ceiling**\n",
-      "*   Price controls result in a deadweight loss because the loss in producer surplus exceeds the gain in consumer surplus (p. 333).\n",
-      "*   In Figure 9.2, the deadweight loss is given by the two triangles B and C (p. 333).\n",
-      "*   Triangle B represents the value to consumers that is lost due to the reduction in output from Q0 to Q1 (p. 332).\n",
-      "*   Triangle C represents the additional loss of producer surplus for producers who have left the market or are producing less (p. 332).\n",
-      "*   The total change in surplus from a price ceiling is the sum of the change in consumer surplus (A - B) and the change in producer surplus (-A - C), resulting in a deadweight loss of -B - C (p. 333).\n"
+      "Concerning the utility function, the attainable level of utility changes when the budget constraint shifts (p. 135). If a good's price increases, the consumer maximizes utility on a lower indifference curve, meaning attainable utility falls (p. 134, p. 145). Conversely, if a good's price decreases, the consumer can reach a higher indifference curve, thus increasing their attainable utility (p. 134, p. 135). A consumer's purchasing power, determined by income and prices, directly impacts their ability to generate utility (p. 109).\n"
      ]
     }
    ],
@@ -609,7 +588,7 @@
     "    return {\"concepts\": concepts, \"chunks\": top, \"answer\": answer}\n",
     "\n",
     "# Demo\n",
-    "q = \"Explain consumer surplus and deadweight loss from a price ceiling.\"\n",
+    "q = \"what happens when budged changes to consumer behavior and the utility function?\"\n",
     "res = ask(q)\n",
     "\n",
     "print(\"Top concepts (deduped):\")\n",
